force-app/main/default/objects/LINE_Message__c/LINE_Message__c.object-meta.xml
<CustomObject>
    <description
  >A LINE chat message between an agent and a customer, shown in the noritzLineChat widget.</description>
    <label>LINE Message</label>
    <nameField>
        <displayFormat>MSG-{000000}</displayFormat>
        <label>Message No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LINE Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>