force-app/main/default/objects/LINE_Message__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The case the agent was working on when this message was sent.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>LINE Messages</relationshipLabel>
    <relationshipName>LINE_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>