force-app/main/default/objects/LINE_Message__c/fields/Delivery_Error__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Error__c</fullName>
    <description
  >Why a push to LINE failed, as returned by LINE or the callout.</description>
    <label>Delivery Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>