force-app/main/default/objects/LINE_Message__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The lead this conversation belongs to before conversion. Moved to Account__c when the lead converts.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LINE Messages</relationshipLabel>
    <relationshipName>LINE_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>