force-app/main/default/objects/LINE_Message__c/fields/LINE_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>LINE_Message_ID__c</fullName>
    <description>Message id from LINE. Unique so a retried webhook delivery is not saved twice.</description>
    <externalId>true</externalId>
    <label>LINE Message ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>