force-app/main/default/objects/LINE_Message__c/fields/LINE_User_ID__c.field-meta.xml
<CustomField>
    <fullName>LINE_User_ID__c</fullName>
    <description>LINE user id of the customer who sent or received this message.</description>
    <label>LINE User ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>