force-app/main/default/objects/LINE_Message__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Checkout Link</fullName>
            </value>
            <value>
                <fullName>Payment Retry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>